Remove encfs and call directory data instead of decrypted

--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -4,12 +4,10 @@ main_user_shell: "/bin/bash"
 friendly_networks:
   - ""
 
-# encfs
+# pass
 secret_root: '{{ inventory_dir | realpath }}'
 secret_name: 'secret'
 secret: '{{ secret_root + "/" + secret_name }}'
-encfs_password: "{{ lookup('password', secret + '/' + 'encfs_password', length=32) }}"
-
 
 # let's encrypt
 letsencrypt_server: "https://acme-v01.api.letsencrypt.org/directory"
