--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -53,18 +53,17 @@
 - name: Apticron email configuration
   template: src=apticron.conf.j2 dest=/etc/apticron/apticron.conf
 
-- name: Create decrypted directory (even if encfs isn't used)
-  file: state=directory path=/decrypted
+- name: Create data directory
+  file: state=directory path=/data
 
-- name: Set decrypted directory permissions
-  file: state=directory path=/decrypted group=mail mode=0775
+- name: Set data directory permissions
+  file: state=directory path=/data group=mail mode=0775
 
 - name: Ensure locale en_US.UTF-8 locale is present
   locale_gen:
     name: en_US.UTF-8
     state: present
 
-- include: encfs.yml tags=encfs
 - include: users.yml tags=users
 - include: apache.yml tags=apache
 - include: ssl.yml tags=ssl
