--- a/roles/mailserver/tasks/z-push.yml
+++ b/roles/mailserver/tasks/z-push.yml
@@ -46,7 +46,7 @@
 - name: Ensure z-push state and log directories are in place
   file: state=directory path={{ item }} owner=www-data group=www-data mode=0755
   with_items:
-    - /decrypted/zpush-state
+    - /data/zpush-state
     - /var/log/z-push
   notify: restart apache
 
