--- a/roles/owncloud/tasks/owncloud.yml
+++ b/roles/owncloud/tasks/owncloud.yml
@@ -35,9 +35,9 @@
 - name: Ensure ownCloud directory is in place
   file: state=directory path=/var/www/owncloud
 
-- name: Move ownCloud data to encrypted filesystem
-  command: mv /var/www/owncloud/data /decrypted/owncloud-data creates=/decrypted/owncloud-data
-- file: src=/decrypted/owncloud-data dest=/var/www/owncloud/data owner=www-data group=www-data state=link
+- name: Move ownCloud data to user-data filesystem
+  command: mv /var/www/owncloud/data /data/owncloud-data creates=/data/owncloud-data
+- file: src=/data/owncloud-data dest=/var/www/owncloud/data owner=www-data group=www-data state=link
 
 - name: Configure Apache for ownCloud
   template: src=etc_apache2_sites-available_owncloud.j2 dest=/etc/apache2/sites-available/owncloud.conf group=root
