--- a/roles/xmpp/tasks/prosody.yml
+++ b/roles/xmpp/tasks/prosody.yml
@@ -23,7 +23,7 @@
   copy: src=etc_letsencrypt_postrenew_prosody.sh dest=/etc/letsencrypt/postrenew/prosody.sh mode=0755
 
 - name: Create Prosody data directory
-  file: state=directory path=/decrypted/prosody owner=prosody group=prosody
+  file: state=directory path=/data/prosody owner=prosody group=prosody
 
 - name: Configure Prosody
   template: src=prosody.cfg.lua.j2 dest=/etc/prosody/prosody.cfg.lua group=prosody owner=prosody
