--- a/roles/mailserver/tasks/checkrbl.yml
+++ b/roles/mailserver/tasks/checkrbl.yml
@@ -1,5 +1,5 @@
 - name: Download check-rbl
-  get_url: url=https://raw.github.com/lukecyca/check-rbl/38006028bc1865e9c/check-rbl.pl dest=/opt/check-rbl.pl sha256sum=59a8e15ee702e8c056426ebdd155fdd7a651716f40c58b7a4fef2a1c312f07da
+  get_url: url=https://raw.githubusercontent.com/lukecyca/check-rbl/e2bd60f5e5175375cd2f7f1b1b752473e3a23640/check-rbl.pl dest=/opt/check-rbl.pl sha256sum=22093bd59ed84cb7ee6e336fb2a4ab73dbe3a05837d2bab9b491a21df16b35d8
 
 - name: Install nightly check-rbl cronjob
   cron: name="check-rbl" hour="2" minute="0" job="perl /opt/check-rbl.pl -i {{ ansible_default_ipv4.address }}"
