--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.vagrant/provisioners/ansible/inventory/vagrant_ansible_inventory
-.vagrant/machines
-tests.pyc
+.DS_Store
 secret
+*.pyc
+site.retry
