common was missing db admin user pass in default vars.

--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -9,6 +9,9 @@ secret_root: '{{ inventory_dir | realpath }}'
 secret_name: 'secret'
 secret: '{{ secret_root + "/" + secret_name }}'
 
+db_admin_username: 'postgres'
+db_admin_password: "{{ lookup('password', secret + '/' + 'db_admin_password', length=32) }}"
+
 # let's encrypt
 letsencrypt_server: "https://acme-v01.api.letsencrypt.org/directory"
 
