--- a/roles/news/defaults/main.yml
+++ b/roles/news/defaults/main.yml
@@ -12,6 +12,6 @@ selfoss_username: "{{ main_user_name }}"
 # this is the sha512 hash of the desired password
 selfoss_password_hash: "{{ lookup('password', secret + '/' + 'selfoss_password_hash', length=32, crypt='sha512')|hash('sha512') }}"
 
-# must match values in roles/mailserver
+# must match values in roles/common
 db_admin_username: 'postgres'
 db_admin_password: "{{ lookup('password', secret + '/' + 'db_admin_password', length=32) }}"
