--- a/roles/common/tasks/security.yml
+++ b/roles/common/tasks/security.yml
@@ -1,6 +1,9 @@
 - name: Install security-related packages
-  apt: pkg={{ item }} state=present
-  with_items:
+  apt:
+    name: "{{ packages }}"
+    state: present
+  vars:
+    packages:
     - fail2ban
     - whois
     - lynis
