Explicitly install postgres-9.6 and fix monit pid-file location for it.

--- a/roles/common/tasks/postgres.yml
+++ b/roles/common/tasks/postgres.yml
@@ -7,7 +7,7 @@
     state: present
   vars:
     packages:
-    - postgresql
+    - postgresql-9.6
     - python-psycopg2
   tags:
     - dependencies
