--- a/roles/common/tasks/apache.yml
+++ b/roles/common/tasks/apache.yml
@@ -9,6 +9,14 @@
   command: a2enmod headers creates=/etc/apache2/mods-enabled/headers.load
   notify: restart apache
 
+- name: Enable Apache proxy module
+  command: a2enmod proxy creates=/etc/apache2/mods-enabled/proxy.load
+  notify: restart apache
+
+- name: Enable Apache proxy http module
+  command: a2enmod proxy_http creates=/etc/apache2/mods-enabled/proxy_http.load
+  notify: restart apache
+
 - name: Create ServerName configuration file for Apache
   template: src=fqdn.j2 dest=/etc/apache2/conf-available/fqdn.conf
 
