--- a/roles/mailserver/tasks/solr.yml
+++ b/roles/mailserver/tasks/solr.yml
@@ -1,3 +1,6 @@
+---
+# Installs and configures the Solr full-text-search.
+
 - name: Install Solr and related packages
   apt: pkg={{ item }} state=present
   with_items:
