Solr is now using Tomcat8

--- a/roles/mailserver/tasks/solr.yml
+++ b/roles/mailserver/tasks/solr.yml
@@ -2,24 +2,43 @@
 # Installs and configures the Solr full-text-search.
 
 - name: Install Solr and related packages
-  apt: pkg={{ item }} state=present
-  with_items:
+  apt:
+    name: "{{ packages }}"
+    state: present
+  vars:
+    packages:
     - dovecot-solr
     - solr-tomcat
   tags:
     - dependencies
 
 - name: Work around Debian bug and copy Solr schema file into place
-  copy: src=solr-schema.xml dest=/etc/solr/conf/schema.xml group=root owner=root
+  copy:
+    src=solr-schema.xml
+    dest=/etc/solr/conf/schema.xml
+    owner=root
+    group=root
 
 - name: Copy tweaked Tomcat config file into place
-  copy: src=etc_tomcat7_server.xml dest=/etc/tomcat7/server.xml group=tomcat7 owner=root
+  copy:
+    src=etc_tomcat8_server.xml
+    dest=/etc/tomcat8/server.xml
+    owner=root
+    group=tomcat8
   notify: restart solr
 
 - name: Copy tweaked Solr config file into place
-  copy: src=etc_solr_conf_solrconfig.xml dest=/etc/solr/conf/solrconfig.xml group=root owner=root
+  copy:
+    src=etc_solr_conf_solrconfig.xml
+    dest=/etc/solr/conf/solrconfig.xml
+    owner=root
+    group=root
   notify: restart solr
 
 - name: Create Solr index directory
-  file: state=directory path=/data/solr group=tomcat7 owner=tomcat7
+  file:
+    state=directory
+    path=/data/solr
+    owner=tomcat8
+    group=tomcat8
   notify: restart solr
