--- a/roles/webmail/defaults/main.yml
+++ b/roles/webmail/defaults/main.yml
@@ -1,5 +1,8 @@
-webmail_version: 1.2.1
-
 # Keep in sync with mail_server_hostname in mailserver role
-webmail_domain: "mail.{{ domain }}"
+webmail_subdomain: "mail"
+webmail_domain: "{{ webmail_subdomain }}.{{ domain }}"
+webmail_language: "en_US"
 
+secret_root: '{{ inventory_dir | realpath }}'
+secret_name: 'secret'
+secret: '{{ secret_root + "/" + secret_name }}'
