--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -10,7 +10,7 @@ secret_name: 'secret'
 secret: '{{ secret_root + "/" + secret_name }}'
 
 db_admin_username: 'postgres'
-db_admin_password: "{{ lookup('password', secret + '/' + 'db_admin_password', length=32) }}"
+db_admin_password: "{{ lookup('password', secret + '/' + 'db_admin_password length=32') }}"
 
 # let's encrypt
 letsencrypt_server: "https://acme-v01.api.letsencrypt.org/directory"
