--- a/roles/news/defaults/main.yml
+++ b/roles/news/defaults/main.yml
@@ -4,7 +4,7 @@ secret: '{{ secret_root + "/" + secret_name }}'
 
 selfoss_domain: "news.{{ domain }}"
 selfoss_db_username: selfoss
-selfoss_db_password: "{{ lookup('password', secret + '/' + 'selfoss_db_password', length=32) }}"
+selfoss_db_password: "{{ lookup('password', secret + '/' + 'selfoss_db_password length=32') }}"
 selfoss_db_database: selfoss
 selfoss_version: 2.16
 
@@ -14,4 +14,4 @@ selfoss_password_hash: "{{ lookup('password', secret + '/' + 'selfoss_password_h
 
 # must match values in roles/common
 db_admin_username: 'postgres'
-db_admin_password: "{{ lookup('password', secret + '/' + 'db_admin_password', length=32) }}"
+db_admin_password: "{{ lookup('password', secret + '/' + 'db_admin_password length=32') }}"
