--- a/roles/xmpp/defaults/main.yml
+++ b/roles/xmpp/defaults/main.yml
@@ -1,3 +1,9 @@
+secret_root: '{{ inventory_dir | realpath }}'
+secret_name: 'secret'
+secret: '{{ secret_root + "/" + secret_name }}'
+
 prosody_admin: "{{ admin_email }}"
-prosody_virtual_domain: "{{ domain }}"
-prosody_accounts: []
+prosody_accounts:
+  - name: "{{ main_user_name }}"
+    domain: "{{ domain }}"
+    password: "{{ lookup('password', secret + '/' + 'xmpp_main_user_password length=32') }}"
