Cleanup monitoring task and add status page on localhost also with ssl

--- a/roles/monitoring/files/etc_apache2_sites-available_00-status.conf
+++ b/roles/monitoring/files/etc_apache2_sites-available_00-status.conf
@@ -6,3 +6,11 @@
     Require ip 127.0.0.1
   </Location>
 </VirtualHost>
+
+<VirtualHost *:443>
+  SSLEngine On
+  <Location />
+    SetHandler server-status
+    Require ip 127.0.0.1
+  </Location>
+</VirtualHost>
