--- a/site.yml
+++ b/site.yml
@@ -16,5 +16,6 @@
     - gitea
     - ircbouncer
     - xmpp
+    - matrix
     - vpn
     - monitoring  # Monitoring role should be last. See roles/monitoring/README.md
